docs: bold summary lines in update list; fix formatting issue.
When scanning the document, the summary lines in the list didn't
standout. Also the spacing before and after the summary line were
equal. The spacing under the line should be less to tie it to the
following paragraph.

Not sure I like the bolded summary lines, it's a little too much
emphasis.

I think the css tweak works though.

--- a/doc/_static/style.css
+++ b/doc/_static/style.css
@@ -51,6 +51,15 @@
 
 * + * { margin-block-start: 1.2em;}
 
+/* shrink spacing between first and following paragraph in a list item
+   when the first paragraph is bold/strong. Try to tie the first paragraph
+   pseudo header closer to the following paragraph. */
+li > p:has(strong):first-child
+ {
+    /* background: red; */
+    margin-block-end: -0.75em;
+}
+
 /* shrink spacing between list elements in tables of contents,
    badge displays */
 div.toctree-wrapper * + *, div.contents * + *, div.release_info * {
